<resources>
    <string name="app_name">BakingApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_recipe_detail">RecipeDetail</string>
    <string name="title_activity_recipe_step_detail">RecipeStepDetail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_image">RecipeImage</string>
    <string name="details">Details</string>
    <string name="share">Share</string>
    <string name="ingredient">ingredient</string>
    <string name="step">Steps</string>
    <string name="onestep">step</string>
    <string name="title_activity_step_detail">StepDetail</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back">Previous</string>
    <string name="next">Next</string>
    <string name="title_activity_recipe_ind">RecipeInd</string>
    <string name="quantity">Quantity</string>
    <string name="measure">Measure</string>
    <string name="ingredients">Ingredient</string>
    <string name="serving">Serving</string>
    <string name="recipe_name" />
    <string name="fav">Favorite</string>
    <string name="toast_Saved">Recipe Saved</string>
    <string name="alredy_saved">Already Saved</string>
    <string name="deleted">Recipe removed from favorites</string>
</resources>
