<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipe_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recipe_title"
                    android:layout_width="270dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal|bottom"
                    android:contentDescription="@string/recipe_name"
                    android:padding="12dp"
                    android:textAllCaps="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorAccent2" />

                <ImageView
                    android:id="@+id/fav"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/fav"
                    android:gravity="end"
                    app:srcCompat="@mipmap/ic_fav" />
            </LinearLayout>

            <TextView
                android:id="@+id/recipe_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/serving"
                android:padding="7dp"
                android:text="Golden Gate"
                android:textColor="@color/gray"
                android:textSize="15dp" />
        </LinearLayout>

        <include layout="@layout/item_divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipe_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@color/cardview_light_background"
                android:clickable="true"
                android:padding="20dp"
                android:text="@string/ingredient"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/recipe_explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@color/cardview_light_background"
                android:clickable="true"
                android:padding="20dp"
                android:text="@string/step"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
