<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantityText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|bottom"
            android:padding="12dp"
            android:text="@string/quantity"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/blue"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/quantity"
            android:padding="7dp"
            android:textColor="@color/gray"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/measureText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|bottom"
            android:padding="12dp"
            android:text="@string/measure"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/blue"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/measure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:padding="7dp"
            android:text="Golden Gate"
            android:textColor="@color/gray"
            android:textSize="17dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ingredientText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:padding="12dp"
            android:textSize="17dp"
            android:text="@string/ingredients"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/ingredient"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:lines="2"
            android:padding="7dp"
            android:textColor="@color/gray"
            android:textSize="17dp" />
    </LinearLayout>

    <include
        layout="@layout/item_divider"
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_below="@+id/linear3" />
</RelativeLayout>