<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg"
            android:orientation="vertical"
            tools:context="eng.android.nd.marwatalaat.bakingapp.ui.RecipeStepDetailFragment">

            <!-- TODO: Update blank fragment layout -->


            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                app:resize_mode="fill" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_light_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/short_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:background="@color/cardview_light_background"
                    android:clickable="true"
                    android:padding="15dp"
                    android:text="@string/step"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <include layout="@layout/item_divider" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:layout_margin="20dp"
                    android:background="@color/cardview_light_background"
                    android:paddingBottom="15dp"
                    android:text="@string/step"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@id/nested"
                android:background="@color/colorPrimary"
                tools:ignore="ObsoleteLayoutParam">

                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/back"
                    android:drawableLeft="@drawable/stepper_left"
                    android:drawableStart="@drawable/stepper_left"
                    android:paddingEnd="5dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="5dp"
                    android:paddingStart="0dp"
                    android:text="@string/back"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:targetApi="honeycomb" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/next"
                    android:drawableEnd="@drawable/stepper_right"
                    android:drawableRight="@drawable/stepper_right"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
